--- a/src/components/spinner/style.scss
+++ b/src/components/spinner/style.scss
@@ -11,7 +11,7 @@
         width: 50px;
         height: 50px;
         & .path {
-            stroke: hsl(210, 70, 75 * 1%);
+            stroke: hsl(210, 70 * 1%, 75 * 1%);
             stroke-linecap: round;
             animation: dash 1.5s ease-in-out infinite;
         }
